--- a/budget-tracker-frontend/package.json
+++ b/budget-tracker-frontend/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "bootstrap": "^5.3.6",
+    "budget-tracker-frontend": "file:",
     "d3": "^7.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,6 +30,8 @@
     "@angular-devkit/build-angular": "^19.0.2",
     "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "^19.0.0",
+    "@types/bootstrap": "^5.2.10",
+    "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
