--- a/budget_tracker/nginx/nginx.conf
+++ b/budget_tracker/nginx/nginx.conf
@@ -2,10 +2,19 @@
 server {
     listen 80 default_server;
     server_name _;
+
+    
     location = /favicon.ico { access_log off; log_not_found off; }
     location /staticfiles/ {
         root /home/ubuntu/budget_tracker/budget_tracker;
     }
+
+     location /app/ {
+        root /home/ubuntu/budget_tracker/budget-tracker-frontend/dist/budget-tracker-frontend;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
+
     location / {
         include proxy_params;
         proxy_pass http://unix:/run/gunicorn.sock;
