--- a/budget_tracker/nginx/nginx.conf
+++ b/budget_tracker/nginx/nginx.conf
@@ -9,11 +9,11 @@ server {
         root /home/ubuntu/budget_tracker/budget_tracker;
     }
 
-     location /app/ {
-        root /home/ubuntu/budget_tracker/budget-tracker-frontend/dist/budget-tracker-frontend;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-    }
+    location /app/ {
+    alias /home/ubuntu/budget_tracker/budget-tracker-frontend/dist/budget-tracker-frontend/;
+    index index.html;
+    try_files $uri $uri/ /index.html;
+}
 
     location / {
         include proxy_params;
