fix cores issue

--- a/budget_tracker/nginx/nginx.conf
+++ b/budget_tracker/nginx/nginx.conf
@@ -9,11 +9,16 @@ server {
         root /home/ubuntu/budget_tracker/budget_tracker;
     }
 
-    location /app/ {
-    alias /home/ubuntu/budget_tracker/budget-tracker-frontend/dist/budget-tracker-frontend/;
-    index index.html;
-    try_files $uri $uri/ /index.html;
-}
+    location /api/ {
+    if ($request_method = OPTIONS) {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+        add_header 'Access-Control-Max-Age' 86400;
+        add_header 'Content-Length' 0;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        return 204;
+    }
 
     location / {
         include proxy_params;
