fix cores issue

--- a/budget_tracker/nginx/nginx.conf
+++ b/budget_tracker/nginx/nginx.conf
@@ -10,15 +10,24 @@ server {
     }
 
     location /api/ {
-    if ($request_method = OPTIONS) {
+        
+    if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
-        add_header 'Access-Control-Max-Age' 86400;
+        add_header 'Access-Control-Max-Age' 1728000;
         add_header 'Content-Length' 0;
         add_header 'Content-Type' 'text/plain charset=UTF-8';
         return 204;
     }
+
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+
+    include proxy_params;
+    proxy_pass http://unix:/run/gunicorn.sock;
+}
 
     location / {
         include proxy_params;
