--- a/budget_tracker/nginx/nginx.conf
+++ b/budget_tracker/nginx/nginx.conf
@@ -10,20 +10,21 @@ server {
     }
 
     location /api/ {
-        
     if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Origin' https://your-vercel-domain.vercel.app;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+        add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Max-Age' 1728000;
         add_header 'Content-Length' 0;
         add_header 'Content-Type' 'text/plain charset=UTF-8';
         return 204;
     }
 
-    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Origin' https://your-vercel-domain.vercel.app;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+    add_header 'Access-Control-Allow-Credentials' 'true';
 
     include proxy_params;
     proxy_pass http://unix:/run/gunicorn.sock;
