--- a/budget_tracker/nginx/nginx.conf
+++ b/budget_tracker/nginx/nginx.conf
@@ -11,7 +11,7 @@ server {
 
     location /api/ {
     if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' https://your-vercel-domain.vercel.app;
+        add_header 'Access-Control-Allow-Origin' 'https://budget-tracker-frontend-ten-kappa.vercel.app';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
         add_header 'Access-Control-Allow-Credentials' 'true';
@@ -21,7 +21,7 @@ server {
         return 204;
     }
 
-    add_header 'Access-Control-Allow-Origin' https://your-vercel-domain.vercel.app;
+    add_header 'Access-Control-Allow-Origin' 'https://budget-tracker-frontend-ten-kappa.vercel.app';
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
     add_header 'Access-Control-Allow-Credentials' 'true';
